#======================#
#=== WORKSPACE INFO ===#

[workspace]
  resolver = "2"
  members = ["crates/*"]

[workspace.package]
  version = "0.1.0"
  edition = "2021"

#========================#
#=== PACKAGE SETTINGS ===#

[profile.dev]
  debug = 0
  strip = "debuginfo"
  opt-level = 0

[profile.dev.package."*"]
  opt-level = 2

[profile.release]
  opt-level = 3
  panic = 'abort'
  debug = 0
  strip = true
  lto = "thin"
  codegen-units = 1

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[workspace.dependencies]
  # CRATES
  util_datafiles     = { path = "crates/files", version = "0.1.0" }
  util_logs          = { path = "crates/logs", version = "0.1.0" }
  util_time          = { path = "crates/time", version = "0.1.0" }

  # STANDARD
  chrono             = { version = "*", features = ["serde"] }

  # NETWORK
  reqwest            = { version = "*" }

  # UTILITIES
  thiserror          = { version = "*" }
  zip                = { version = "*" }

  # SERIALIZATION
  serde              = { version = "*", features = ["derive"] }
  serde_json         = { version = "*", features = ["arbitrary_precision"] }
  bincode            = { version = "*" }
  toml               = { version = "*" }
  #skytable           = { version = "*" }
  skytable = { git = "https://github.com/skytable/client-rust.git" }

  # TERMINAL LOGS
  tracing            = { version = "*" }
  tracing-subscriber = { version = "*" }
  indicatif          = { version = "*" }
  tracing-indicatif  = { version = "*" }