#====================#
#=== PACKAGE INFO ===#

[package]
  name = "files"
  version.workspace = true
  edition.workspace = true

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]
  thiserror          = { workspace = true }
  serde              = { workspace = true }
  serde_json         = { workspace = true }
  bincode            = { workspace = true }
  toml               = { workspace = true }