#====================#
#=== PACKAGE INFO ===#

[package]
  name = "util_time"
  version.workspace = true
  edition.workspace = true

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]

  thiserror          = { workspace = true }
  serde              = { workspace = true }
  chrono             = { workspace = true, features = ["serde"] }